# site

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .treefmt.toml  Cargo.toml  README.md  Trunk.toml  build.rs  flake.nix  index.html  input.css  lwc_mount.js  rustc-ice-2025-03-09T11_36_40-45694.txt  tailwind.config.js
.cargo/: config.toml  rust-toolchain.toml
.github/workflows/: ci.nix  claude-code-review.yml  claude.yml  errors.yml  other.yml  release-container.yml  warnings.yml
.readme_assets/: installation.md  usage.md
.sass-cache/094db8c2a1c1326689f8fa1569ec9cd424eb773c/: main.scssc
.sass-cache/bec24c8189fb9ec6d9883f8735ff86a874e7dcbf/: main.scssc
docs/.readme_assets/: description.md
examples/: config.nix  render_shell.rs  test.rs
examples/config/: config.toml
public/: custom.css  lwc_draw.js  styles.css  tailwind.config.js
public/blog/: a_newer_file.typ  another_random_test.typ  catchup_plays.typ  meta.json
public/blog/catchup_plays/: mod.typ
public/blog/snapshot_fonts/: mod.typ
src/: admin.rs  app.rs  conf.rs  config.rs  keyboard.rs  lib.rs  main.rs  tmp.rs  utils.rs
src/auth/: db.rs  email.rs  mod.rs  types.rs
src/blog/: compile.rs  mod.rs
src/dashboards/: deck.rs  lsr.rs  mod.rs
src/dashboards/_core/: mod.rs
src/dashboards/cme/: data.rs  mod.rs
src/dashboards/fag/: mod.rs
src/dashboards/fng/: data.rs  mod.rs
src/dashboards/lsr/: data.rs  mod.rs
src/dashboards/market_structure/: data.rs  mod.rs
src/dashboards/vol/: data.rs  mod.rs
style/: tailwind_in.css  tailwind_out.css
