cargo-features = ["codegen-backend"]

[package]
name = "site"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
output-name = "site"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "public/styles.css"
# Assets source dir. All files found here will be copied and synchronized to site-root. //NB: The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
assets-dir = "public"

site-addr = "127.0.0.1:61156"
reload-port = 61157

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

env = "DEV" # "DEV" | "PROD"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

lib-profile-release = "wasm-release"

[package.metadata.cargo-all-features]
skip_feature_sets = [["ssr", "hydrate"]]

[lib]
crate-type = ["cdylib", "rlib"]
#,}}}

[features]
default = ["ssr", "hydrate"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
    "dep:send_wrapper",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:any_spawner",
    "dep:serde_json",
    "dep:v_exchanges",
    "dep:axum",
    "dep:tokio",
    "dep:tracing",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:chrono",
    "dep:chrono-tz",
    "dep:plotly",
    "dep:clickhouse",
    "dep:bcrypt",
    "dep:uuid",
    "dep:tower-cookies",
    "dep:tower-http",
    "dep:lettre",
    "dep:oauth2",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
color-eyre = "0.6.5"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["from", "display", "deref", "deref_mut", "debug"] }
futures = "0.3.31"
leptos = { version = "^0.8.14", features = ["islands"] }
leptos-routable = { git = "https://github.com/stefanboere/leptos-routable" }
leptos_meta = { version = "^0.8.5" }
leptos_router = { version = "^0.8.10" }
proc-macro2 = "=1.0.103"
serde = { version = "^1.0.228", features = ["derive"] }
v_utils = { version = "2.11.1", features = [ "cli", "xdg" ] }
web-sys = "^0.3"

# optional-hydrate {{{
console_error_panic_hook = { version = "^0.1", optional = true }
gloo-timers = { version = "^0.3", features = ["futures"], optional = true }
send_wrapper = { version = "^0.6", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true } #NB: version must match that of wasm-bindgen-cli I'm compiling the project with
wasm-bindgen-futures = "0.4"
#,}}}

# optional-ssr {{{
any_spawner = { version = "^0.3", optional = true }
axum = { version = "^0.8", optional = true }
bcrypt = { version = "^0.17", optional = true }
chrono = { version = "^0.4.42", optional = true, features = ["serde"] }
chrono-tz = { version = "^0.10.4", optional = true }
clap = { version = "^4.5.53", features = ["derive"] }
clickhouse = { version = "^0.14", features = ["time"], optional = true }
jiff = { version = "0.2.16", features = ["serde"] }
leptos_axum = { version = "^0.8", optional = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"], optional = true }
oauth2 = { version = "5.0.0", optional = true }
plotly = { version = "^0.13.5", features = ["image", "kaleido"], optional = true }
reqwest = { version = "^0.12.24", optional = true }
serde_json = { version = "^1.0.145", optional = true }
serde_with = { version = "^3.16.1", features = ["chrono"] }
tokio = { version = "^1", features = ["rt-multi-thread"], optional = true }
tower-cookies = { version = "^0.11", optional = true }
tower-http = { version = "^0.6", features = ["fs"], optional = true }
tracing = { version = "^0.1.43", optional = true }
uuid = { version = "^1.19", features = ["v4"], optional = true }
v_exchanges = { version = "0.16.0", features = ["binance", "bybit", "data"], optional = true }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "test"
path = "./examples/test.rs"
