cargo-features = ["codegen-backend"]

[package]
name = "site"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
output-name = "site"
site-root = "target/site"
site-pkg-dir = "pkg"
# Assets source dir. All files found here will be copied and synchronized to site-root. //NB: The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
assets-dir = "public"

site-addr = "127.0.0.1:61156"
reload-port = 61157

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

env = "DEV" # "DEV" | "PROD"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

lib-profile-release = "wasm-release"

[package.metadata.cargo-all-features]
skip_feature_sets = [["ssr", "hydrate"]]

[lib]
crate-type = ["cdylib", "rlib"]
#,}}}

[features]
default = ["ssr", "hydrate"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
    "dep:send_wrapper",
]
ssr = [
    "dep:any_spawner",
    "dep:pulldown-cmark",
    "dep:serde_json",
    "dep:v_exchanges",
    "dep:axum",
    "dep:tokio",
    "dep:tracing",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:chrono",
    "dep:chrono-tz",
    "dep:plotly",
    "dep:sqlx",
    "dep:bcrypt",
    "dep:uuid",
    "dep:tower-cookies",
    "dep:tower-http",
    "dep:lettre",
    "dep:miette",
    "dep:oauth2",
    "dep:xdg",
    "dep:notify",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
color-eyre = "=0.6.5"
derive-new = "=0.7.0"
derive_more = { version = "=2.1.1", features = ["from", "display", "deref", "deref_mut", "debug"] }
futures = "=0.3.32"
js-sys = "=0.3.99"
leptos = { version = "=0.8.19", features = ["islands"] }
leptos-routable = { git = "https://github.com/stefanboere/leptos-routable" }
leptos_meta = { version = "=0.8.6" }
leptos_router = { version = "=0.8.13" }
proc-macro2 = "=1.0.106"
serde = { version = "=1.0.228", features = ["derive"] }
v_utils = { version = "=2.15.47", features = ["cli", "xdg"] }
web-sys = { version = "=0.3.99", features = ["Navigator", "Clipboard", "HtmlInputElement", "FileList", "File", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }

# optional-hydrate {{{
console_error_panic_hook = { version = "=0.1.7", optional = true }
gloo-timers = { version = "=0.4.0", features = ["futures"], optional = true }
send_wrapper = { version = "=0.6.0", optional = true }
wasm-bindgen = "=0.2.122" #NB: version must match that of wasm-bindgen-cli I'm compiling the project with
wasm-bindgen-futures = "=0.4.72"
#,}}}

# optional-ssr {{{
any_spawner = { version = "=0.3.0", optional = true }
axum = { version = "=0.8.9", optional = true }
base64 = "=0.22.1"
bcrypt = { version = "=0.19.1", optional = true }
chrono = { version = "=0.4.44", optional = true, features = ["serde"] }
chrono-tz = { version = "=0.10.4", optional = true }
clap = { version = "=4.6.1", features = ["derive"] }
jiff = { version = "=0.2.28", features = ["serde"] }
leptos_axum = { version = "=0.8.9", optional = true }
lettre = { version = "=0.11.22", features = ["tokio1-native-tls", "builder"], optional = true }
miette = { version = "=7.6.0", features = ["fancy"], optional = true } # required in scope by v_utils' `clientside!` macro
notify = { version = "=8.2.0", optional = true }
oauth2 = { version = "=5.0.0", optional = true }
plotly = { version = "=0.14.1", features = ["image", "kaleido"], optional = true }
pulldown-cmark = { version = "=0.13.4", optional = true }
reqwest = { version = "=0.12.28", features = ["json"], optional = true } # pinned to 0.12: oauth2 5.0 has not migrated to reqwest 0.13
serde_json = { version = "=1.0.150", optional = true }
serde_with = { version = "=3.20.0", features = ["chrono"] }
sqlx = { version = "^0.9", features = ["sqlite", "runtime-tokio"], optional = true }
tokio = { version = "=1.52.3", features = ["rt-multi-thread"], optional = true }
tower-cookies = { version = "=0.11.0", optional = true }
tower-http = { version = "=0.6.11", features = ["fs"], optional = true }
tracing = { version = "=0.1.44", optional = true }
uuid = { version = "=1.23.2", features = ["v4"], optional = true }
v_exchanges = { version = "=0.18.0", features = ["binance", "bybit", "data"], optional = true }
xdg = { version = "=3.0.0", optional = true }

# v_utils 2.15.47 pulls `ustr` -> `ahash` -> `getrandom 0.3` unconditionally; on wasm getrandom needs its `wasm_js` backend feature (+ the cfg in .cargo/config.toml)
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# published v_exchanges 0.18.0 still imports the (now-emptied) `v_utils::prelude`; patch to the local fixed tree until republished.
# v_exchanges' workspace pins v_utils via a path dep, so site must resolve the SAME v_utils source or `Pair`/etc. won't unify across the boundary.
[patch.crates-io]
v_exchanges = { path = "../v_exchanges/v_exchanges" }
v_utils = { path = "../v_utils/v_utils" }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "test"
path = "./examples/test.rs"
