cargo-features = ["codegen-backend"]

[package]
name = "site"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
output-name = "site"
site-root = "target/site"
site-pkg-dir = "pkg"
# Assets source dir. All files found here will be copied and synchronized to site-root. //NB: The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
assets-dir = "public"

site-addr = "127.0.0.1:61156"
reload-port = 61157

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

env = "DEV" # "DEV" | "PROD"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

lib-profile-release = "wasm-release"

[package.metadata.cargo-all-features]
skip_feature_sets = [["ssr", "hydrate"]]

[lib]
crate-type = ["cdylib", "rlib"]
#,}}}

[features]
# ssr + hydrate are mutually exclusive (see skip_feature_sets); plain `cargo r/b` must pick one.
# cargo-leptos overrides via bin-/lib-features, so this only governs bare cargo → server target.
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
    "dep:send_wrapper",
]
ssr = [
    "dep:any_spawner",
    "dep:pulldown-cmark",
    "dep:serde_json",
    "dep:v_exchanges",
    "dep:axum",
    "dep:tokio",
    "dep:tracing",
    "dep:leptos_axum",
    "dep:reqwest",
    "dep:arrow",
    "dep:sqlx",
    "dep:bcrypt",
    "dep:uuid",
    "dep:tower-cookies",
    "dep:tower-http",
    "dep:lettre",
    "dep:miette",
    "dep:oauth2",
    "dep:xdg",
    "dep:notify",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[dependencies]
dockviewers = { version = "0.1.10", features = ["leptos"] }

any_spawner = { version = "=0.3.0", optional = true }
arrow = { version = "=59.1.0", default-features = false, features = ["ipc"], optional = true }
axum = { version = "=0.8.9", optional = true }
base64 = "=0.22.1"
bcrypt = { version = "=0.19.2", optional = true }
clap = { version = "=4.6.1", features = ["derive"] }
color-eyre = "=0.6.5"
console_error_panic_hook = { version = "=0.1.7", optional = true }
derive-new = "=0.7.0"
derive_more = { version = "=2.1.1", features = ["from", "display", "deref", "deref_mut", "debug"] }
futures = "=0.3.32"
gloo-timers = { version = "=0.4.0", features = ["futures"], optional = true }
jiff = { version = "=0.2.32", features = ["serde"] }
js-sys = "=0.3.103"
leptos = { version = "=0.8.20", features = ["islands"] }
leptos-routable = { git = "https://github.com/stefanboere/leptos-routable" }
leptos_axum = { version = "=0.8.10", optional = true }
leptos_meta = { version = "=0.8.6" }
leptos_router = { version = "=0.8.14" }
lettre = { version = "=0.11.22", features = ["tokio1-native-tls", "builder"], optional = true }
miette = { version = "=7.6.0", features = ["fancy"], optional = true } # required in scope by v_utils' `clientside!` macro
notify = { version = "=8.2.0", optional = true }
oauth2 = { version = "=5.0.0", optional = true }
proc-macro2 = "=1.0.106"
pulldown-cmark = { version = "=0.13.4", optional = true }
reqwest = { version = "=0.12.28", features = ["json"], optional = true } # pinned to 0.12: oauth2 5.0 has not migrated to reqwest 0.13 (its `request_async` only accepts its own reqwest 0.12 client type)
send_wrapper = { version = "=0.6.0", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", optional = true }
serde_with = { version = "=3.21.0" }
sqlx = { version = "^0.9", features = ["sqlite", "runtime-tokio"], optional = true }
tokio = { version = "=1.52.3", features = ["rt-multi-thread"], optional = true }
tower-cookies = { version = "=0.11.0", optional = true }
tower-http = { version = "=0.7.0", features = ["fs", "compression-gzip"], optional = true }
tracing = { version = "=0.1.44", optional = true }
uuid = { version = "=1.23.5", features = ["v4"], optional = true }
v_exchanges = { version = "=0.18.5", features = ["binance", "bybit", "data"], optional = true }
v_utils = { version = "=2.15.54", features = ["cli", "xdg"] }
wasm-bindgen = "=0.2.126" #NB: version must match that of wasm-bindgen-cli (pinned in flake.nix)
wasm-bindgen-futures = "=0.4.76"
web-sys = { version = "=0.3.103", features = ["Navigator", "Clipboard", "Document", "Element", "HtmlElement", "HtmlInputElement", "FileList", "File", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }
xdg = { version = "=3.0.0", optional = true }

# v_utils 2.15.47 pulls `ustr` -> `ahash` -> `getrandom 0.3` unconditionally; on wasm getrandom needs its `wasm_js` backend feature (+ the cfg in .cargo/config.toml)
[target.wasm32-unknown-unknown.dependencies]
# must stay on the same major as the transitive getrandom that reaches wasm (0.3 via ahash) — a 0.4 dep here would not enable wasm_js on the 0.3 copy
getrandom = { version = "=0.3.4", features = ["wasm_js"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[[example]]
name = "test"
path = "./examples/test.rs"

[lints.rust]
unused_features = "allow"
